use visibility method vs display method when activating snippets prevents reinjecting scroll events

--- a/style/style.css
+++ b/style/style.css
@@ -293,7 +293,7 @@ td {
 
 .snippet-player-chart {
 	box-sizing: border-box;
-	width: 100%;
+	position: absolute;
 }
 
 .snippet-player-snapshot {
